Added include_addresses flag to thread and comments external APIs
