# packages/common-common/src/api/extApiTypes.ts
@@ -27,6 +27,7 @@ export type IPagination = {
 export type GetCommentsReq = {
   community_id: string;
   addresses?: string[];
+  include_addresses?: boolean;
   count_only?: boolean;
 } & IPagination;
 
@@ -45,6 +46,7 @@ export type GetThreadsReq = {
   addresses?: string[];
   no_body?: boolean;
   include_comments?: boolean;
+  include_addresses?: boolean;
   count_only?: boolean;
 } & IPagination;
 
